--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -93,11 +93,11 @@ body {
 
 /* login  */
 .front-form .form-control {
-  @apply w-full border border-gray-400 text-sm py-2 px-3 rounded-md;
+  @apply w-full border border-gray-300 text-sm py-2 px-3 rounded-md;
 }
 
 .front-form .form-label {
-  @apply text-sm font-medium leading-normal pb-1.5 inline-block;
+  @apply text-[0.8rem] font-medium leading-normal pb-1 inline-block text-gray-500;
 }
 
 .spinnerFront {
