regular push on 31-10-2023 11:53

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,21 @@
   padding: 0;
   box-sizing: border-box !important;
 }
+/* width */
+*::-webkit-scrollbar {
+  width: 6px;
+  border-radius: 5px;
+}
+
+/* Track */
+*::-webkit-scrollbar-track {
+  background: transparent; 
+}
+ 
+/* Handle */
+*::-webkit-scrollbar-thumb {
+  @apply bg-act; 
+}
 
 body {
   color: rgb(var(--foreground-rgb));
