--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -325,6 +325,13 @@ span.cart-icon-div-quantity {
   scale: 1.05;
   transition: 0.3s ease-in-out;
 }
+.blog-down-arrow{
+  animation: blogArrow 1s infinite  alternate;
+}
+@keyframes blogArrow {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-10px); }
+}
 
 @media only screen and (max-width: 991.99px) {
 
