--- a/src/app/backend/backend-dashboard/dashboard.css
+++ b/src/app/backend/backend-dashboard/dashboard.css
@@ -14,26 +14,25 @@
 }
 
 .backend-dashboard {
-    @apply bg-gradient-to-br from-gray-900 to-cyan-900 text-gray-50;
+    @apply bg-gray-900 text-gray-200;
 }
-
 .form-inp {
     @apply flex flex-col gap-2;
 }
 
 .form-label {
-    @apply text-sm font-medium text-gray-400;
+    @apply text-sm font-medium text-gray-700;
 }
 
 .form-ctrl {
-    @apply p-3 rounded-md text-gray-200 hover:border-cyan-900 focus:outline-none w-full bg-gray-600 text-sm font-medium;
+    @apply p-3 rounded-md text-gray-900 hover:border-cyan-900 focus:outline-none w-full bg-gray-200 text-sm font-medium;
 }
 .form-ctrl.checkbox{
     @apply p-3 rounded-md text-gray-200 hover:border-cyan-900 focus:outline-none w-3.5 h-3.5 me-2.5 ms-1 accent-cyan-500 bg-gray-600 text-sm font-medium;
 }
 
 .dashboard-btn {
-    @apply bg-gray-900 rounded-md border border-cyan-500 px-5 py-2 text-sm font-medium;
+    @apply bg-gray-900 rounded-md border border-cyan-500 px-5 py-2 text-sm font-medium text-gray-200;
 }
 
 .dashboard-btn-sec {
@@ -55,47 +54,58 @@
 }
 
 .dash-nav-list {
-    @apply block rounded-md px-3 py-2 text-sm font-medium text-gray-400
+    @apply flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium text-gray-400
      hover:text-gray-300  hover:bg-gray-800 border border-transparent hover:border-gray-600;
 }
 
 .nav-scroll {
     overflow-y: scroll;
     height: calc(100vh - 15vh);
-    padding-right: 10px
 }
 
 .inner-pages-base-div{
-    @apply container border border-gray-600 rounded-md p-6;
-    backdrop-filter: blur(16px);
-    -webkit-backdrop-filter: blur(16px);
-    background-color: #0d2f3c8c;
-    border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, 0.125);
+    @apply container bg-white rounded-md p-6 text-black rounded-lg;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 .search-table-inp input{
     padding-left: 40px;
 }
+.dash-nav-head-link{
+    @apply p-3 text-xs font-semibold uppercase tracking-wider text-gray-400 rounded-lg hover:bg-gray-800;
+}
+.dash-nav-head.active{
+    @apply bg-gray-800 text-xs font-semibold uppercase tracking-wider text-gray-400 rounded-lg;
+}
+.dash-nav-head-link.active{
+    @apply bg-gray-800;
+}
+.edit-btn{
+    @apply text-green-600 bg-green-400 bg-opacity-25 p-1.5 rounded-md;
+}
+.delete-btn{
+    @apply text-red-600 bg-red-400 bg-opacity-25 p-1.5 rounded-md;
+}
 
 /* ckeditor */
 .ckeditor-bg{
-    @apply border border-gray-600 rounded-md p-2 bg-gray-600;
+    @apply border border-gray-200 rounded-md p-2 bg-gray-200;
 }
 .ck.ck-editor__main>.ck-editor__editable, 
 .ck.ck-editor .ck-editor__top .ck-sticky-panel .ck-toolbar{
-   background-color: #4B5563 !important;
+   background-color: #E5E7EB !important;
    border: none;
 }
 .ck.ck-toolbar>.ck-toolbar__items>:not(.ck-toolbar__line-break), .ck.ck-toolbar>.ck.ck-toolbar__grouped-dropdown,
 .ck.ck-dropdown .ck-button.ck-dropdown__button .ck-button__label,
 .ck.ck-icon{
-    color: #fff !important;
+    color: #374151  !important;
 }
 .ck.ck-button:not(.ck-disabled):hover, a.ck.ck-button:not(.ck-disabled):hover{
-    background-color: #647081 !important;
+    background-color: #374151  !important;
+    color: #ffffff  !important;
 }
 .ck.ck-reset_all{
-    border-bottom: 1px solid #ffffff8a !important;
+    border-bottom: 1px solid #37415164  !important;
 }
 .ck.ck-editor__main>.ck-editor__editable{
     height: 200px;
