--- a/src/app/backend/backend-dashboard/dashboard.css
+++ b/src/app/backend/backend-dashboard/dashboard.css
@@ -17,15 +17,15 @@
     @apply bg-gray-900 text-gray-200;
 }
 .form-inp {
-    @apply flex flex-col gap-2;
+    @apply flex flex-col gap-1.5;
 }
 
 .form-label {
-    @apply text-sm font-medium text-gray-700;
+    @apply text-[0.8rem] font-medium text-gray-700;
 }
 
 .form-ctrl {
-    @apply p-3 rounded-md text-gray-900 hover:border-cyan-900 focus:outline-none w-full bg-gray-200 text-sm font-medium;
+    @apply p-2.5 rounded-md text-gray-900 hover:border-cyan-900 focus:outline-none w-full bg-gray-200 text-[0.8rem] font-medium;
 }
 .form-ctrl.checkbox{
     @apply p-3 rounded-md text-gray-200 hover:border-cyan-900 focus:outline-none w-3.5 h-3.5 me-2.5 ms-1 accent-cyan-500 bg-gray-600 text-sm font-medium;
@@ -64,8 +64,14 @@
 }
 
 .inner-pages-base-div{
-    @apply container bg-white rounded-md p-6 text-black rounded-lg;
+    @apply container bg-white p-6 text-black rounded-2xl;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+}
+.inner-pages-base-div.form-page{
+    @apply max-w-3xl mx-auto;
+}
+.inner-pages-base-div.form-page-list{
+    @apply max-w-5xl mx-auto;
 }
 .search-table-inp input{
     padding-left: 40px;
@@ -77,7 +83,7 @@
     @apply bg-gray-800 text-xs font-semibold uppercase tracking-wider text-gray-400 rounded-lg;
 }
 .dash-nav-head-link.active{
-    @apply bg-gray-800;
+    @apply bg-gray-800 border border-gray-700;
 }
 .edit-btn{
     @apply text-green-600 bg-green-400 bg-opacity-25 p-1.5 rounded-md;
