--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,15 @@ body {
   background: rgb(var(--background-end-rgb));
   overflow-x: hidden;
 }
-
+h1{
+  @apply text-3xl;
+}
+h2{
+  @apply text-2xl;
+}
+h3{
+  @apply text-xl;
+}
 .btn-prim {
   @apply text-[0.8rem] text-center inline-flex items-center justify-center bg-act text-black rounded-full font-semibold py-2 px-6 hover:bg-prim hover:text-act transition ease-linear;
 }
@@ -307,6 +315,14 @@ span.cart-icon-div-quantity {
   height: 100px;
 }
 
+.home-cate-slider{
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 /* front form */
 .input {
   @apply w-full rounded-full border-gray-200 bg-gray-100 p-2 text-sm font-medium text-gray-700 placeholder:text-gray-700;
@@ -371,6 +387,15 @@ footer {
 }
 
 
+/* customer dashboard */
+.dashboard-nav{
+  @apply flex font-medium items-center gap-3 py-2 px-2 hover:bg-gray-100 active:bg-gray-100 rounded-lg;
+}
+.dashboard-nav.active{
+  @apply bg-act;
+}
+
+
 @media only screen and (max-width: 991.99px) {
 
   /* product filter */
@@ -429,4 +454,28 @@ footer {
     padding: 10px;
     width: 100%;
   }
+}
+@media only screen and (max-width: 767.99px){
+  h1{
+    @apply text-2xl;
+  }
+  h2{
+    @apply text-xl;
+  }
+  h3{
+    @apply text-lg;
+  }
+  .cateslide .swiper-pagination {
+    top: 40px !important;
+    height: 100px;
+  }
+  .swiper-pagination-bullet {
+    @apply text-[0.7rem];
+  }
+  /* .home-cate-slider{
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+  } */
 }
