--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,7 +117,7 @@ h3{
 
 /* login  */
 .front-form .form-control {
-  @apply w-full border border-gray-300 text-sm py-2 px-3 rounded-md;
+  @apply w-full border border-gray-300 text-sm py-2 px-3 rounded-md text-gray-500;
 }
 
 .front-form .form-label {
