--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,7 +55,7 @@ h3{
   @apply text-xl;
 }
 .btn-prim {
-  @apply text-[0.8rem] text-center inline-flex items-center justify-center bg-act text-black rounded-full font-semibold py-2 px-6 hover:bg-prim hover:text-act transition ease-linear;
+  @apply md:text-[0.8rem] text-[0.7rem] text-center inline-flex items-center justify-center bg-act text-black rounded-full font-semibold md:py-2 py-1.5 md:px-6 px-3 hover:bg-prim hover:text-act transition ease-linear;
 }
 
 .loader-parent {
@@ -494,4 +494,6 @@ footer {
     scale: 0.85;
     transform: translateY(-30px)
   }
+
+
 }
