--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,7 +59,7 @@ h3 {
 }
 
 .btn-prim {
-  @apply md:text-[0.8rem] text-[0.7rem] text-center inline-flex items-center justify-center bg-act text-prim rounded-full font-semibold md:py-2 py-1.5 md:px-6 px-3 hover:bg-prim hover:text-act transition ease-linear;
+  @apply md:text-[0.8rem] text-[0.7rem] text-center inline-flex items-center justify-center bg-act text-black rounded-full font-semibold md:py-2 py-1.5 md:px-6 px-3 hover:bg-prim hover:text-act transition ease-linear;
 }
 
 .btn-prim-sec {
@@ -590,6 +590,17 @@ footer {
   form.modal-form {
     scale: 0.85;
     transform: translateY(-30px)
+  }
+
+  .threesix-product-outer{
+    height: 80dvh;
+    left: 0;
+    bottom: 0;
+    transform: translate(0,0);
+    width: 100%;
+    top: unset;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
   }
 
 
